# moizd9.github.io

./: .nojekyll  README.md  _quarto.yml  about.html  about.qmd  index.html  index.qmd  projects.html  projects.qmd  pyproject.toml  requirements.txt  resume.html  resume.qmd  robots.txt  search.json  sitemap.xml  styles.css
.github/workflows/: pubish.yml
_site/: about.html  index.html  projects.html  resume.html  search.json  styles.css
