[project]
name = "moizd9-github-io"
version = "0.0.1"
description = "Initial Website for Moiz Deshmukh Github"
authors = [
    {name = "moizd9",email = "deshmukhmoiz3@gmail.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "numpy (>=2.2.2,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=5.24.1,<6.0.0)"
]

[tool.poetry]
packages = [{include = "moizd9"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
